--- a/src/pages/index/index.html
+++ b/src/pages/index/index.html
@@ -10,7 +10,7 @@
     </head>
     <body>
         <%= require('html-loader?minimize=false!../../common/partials/nav.html') %>
-        
+        <img src="<%=require('../../common/static/unicorn.jpg')%>">
         <h1 class="page-title">HOMEPAGE</h1>
     </body>
 </html>
